docs: added last endpoints documentation (feed, comments, health)
