# cmd/api/health.go
@@ -4,6 +4,15 @@ import (
 	"net/http"
 )
 
+// getHealth godoc
+//
+//	@Summary		Shows the server health
+//	@Description	Fetches the user feed with flags for filtering
+//	@Tags			Health
+//	@Accept			json
+//	@Produce		json
+//	@Failure		500	{object}	error
+//	@Router			/health [get]
 func (app *application) healthCheckHandler(w http.ResponseWriter, r *http.Request) {
 	data := map[string]string{
 		"status":  "ok",
